--- a/JS Arrays/index.html
+++ b/JS Arrays/index.html
@@ -12,6 +12,7 @@
     <p>Some of Array's concepts in JavaScript</p>
 </body>
 
+<!--  js script added -->
 <script src="scritp.js"></script>
 
 </html>
